--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,10 @@
     "import/resolver": {
       "node": {
         "extensions": [".js", ".jsx"]
+      },
+      "alias": {
+        "map": [["@", "./src"]],
+        "extensions": [".js", ".jsx"]
       }
     }
   }
