--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@reduxjs/toolkit": "^2.2.6",
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
