--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.24.0"
+    "react-router-dom": "^6.24.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
